Minor fix na exibição do menu responsivo Inclusão do collapse.js para funcionar o menu responsivo Fix do tamanho da fonte active do menu

--- a/prototipo/css/style.css
+++ b/prototipo/css/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 li.active {
-	font-size: 20px;
+	
 }
 
 .dropdown {
